modificacion para funciones de usuario

--- a/header.html
+++ b/header.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="js/funciones.js"></script>
 <script type="text/javascript" src="js/sesion.js"></script>
 <script type="text/javascript" src="js/registro.js"></script>
 <nav class="navbar navbar-default" data-spy="affix" data-offset-top="197" >
