modificaion para inmueble

--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="es" ng-app="">
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Realiza la búsqueda de casa, departamento que deseas de tu gusto">
-        <meta name="author" content="Ivan Romero Garcia">
-        <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Conform House</title>
-        <link rel="stylesheet" href="css/styleindex.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/angular.min.js"></script>
-        <script type="text/javascript" src="js/angular-route.min.js"></script>
-        <script type="text/javascript" src="js/jquery.cookie.js"></script>
-        <script type="text/javascript" src="js/jquery.paginate.js"></script>
-        <script type="text/javascript" src="js/funciones.js"></script>
-        <script type="text/javascript" src="js/sesion.js"></script>
-        <script type="text/javascript" src="js/peticiones.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-    </head>
-    <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<!--Secion de Encabezado de la paguina-->
-        <header class="encabezado imageBac" >
-            <nav class="navbar navbar-default center" data-spy="affix" data-offset-top="197" >
-                <div class="container-fluid buscador">
-                    <div class="navbar-header  ">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="http://localhost/index.html" ><p class="letras">WebSiteName</p></a>
-                    </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Realiza la búsqueda de casa, departamento que deseas de tu gusto">
+    <meta name="author" content="Ivan Romero Garcia">
+    <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Conform House</title>
+    <link rel="stylesheet" href="css/styleindex.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="js/jquery.paginate.js"></script>
+    <script type="text/javascript" src="js/funciones.js"></script>
+    <script type="text/javascript" src="js/sesion.js"></script>
+    <script type="text/javascript" src="js/peticiones.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+</head>
+
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+
+    <!--Secion de Encabezado de la paguina-->
+    <header class="encabezado imageBac">
+        <nav class="navbar navbar-default center" data-spy="affix" data-offset-top="197">
+            <div class="container-fluid buscador">
+                <div class="navbar-header  ">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="http://localhost/index.html">
+                        <p class="letras">WebSiteName</p>
+                    </a>
+                </div>
                 <div>
                     <div class="collapse navbar-collapse" id="myNavbar">
                         <form id="formularioBusqueda" class="navbar-form navbar-left" role="search">
@@ -70,11 +74,11 @@
                                     <li class="menu1"><a href="login.html">Entrar</a></li>
                                     <li class="divider menu1"></li>
                                     <li class="menu1"><a href="registro.html">Registrate</a></li>
-                                    <li  id="publica" class="menu2"><a href="user.html">Publica</a></li>
+                                    <li id="publica" class="menu2"><a href="user.html">Publica</a></li>
                                     <li class="divider menu2"></li>
-	                                <li  id="favoritos" class="menu2"><a href="user.html">Favoritos</a></li>
+                                    <li id="favoritos" class="menu2"><a href="user.html">Favoritos</a></li>
                                     <li class="divider menu2"></li>
-                                    <li  id="anuncios" class="menu2"><a href="user.html">Mis Anuncios</a></li>
+                                    <li id="anuncios" class="menu2"><a href="user.html">Mis Anuncios</a></li>
                                     <li class="divider menu2"></li>
                                     <li id="notificaciones" class="menu2"><a href="user.html">Notificaciones</a></li>
                                     <li class="divider menu2"></li>
@@ -84,23 +88,23 @@
                         </ul>
                     </div>
                 </div>
-                </div>
-            </nav>
-        </header>
-<!--Fin de la seccion del Encabezado de la paguina-->
-        <div class="container-fluid">
-            <div class="row" >
-<!---Aside de filtros de busqueda de la pagina extraido de una plantilla---->
-                <aside id="asi" ng-include src="'asiizq.html'">
+            </div>
+        </nav>
+    </header>
+    <!--Fin de la seccion del Encabezado de la paguina-->
+    <div class="container-fluid">
+        <div class="row">
+            <!---Aside de filtros de busqueda de la pagina extraido de una plantilla---->
+            <aside id="asi" ng-include src="'asiizq.html'">
 
-                </aside>
+            </aside>
 
-<!---Section de la paguina---->
-                <section >
+            <!---Section de la paguina---->
+            <section>
 
-<!--div que va contener la informacion de los inmuebles-->
-                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 contenido">
-<!--
+                <!--div que va contener la informacion de los inmuebles-->
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 contenido">
+                    <!--
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                             <img class="img-responsive" src="img/ciudad.jpg" alt="Chania">
                         </div>
@@ -135,27 +139,28 @@
                         </div>
                     </div>
 -->
-<!--div que va contener las paguinaciones de la paguina-->
+                    <!--div que va contener las paguinaciones de la paguina-->
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                         <div id="paginacion" class="col-sm-offset-1 col-md-offset-3">
 
                         </div>
                     </div>
 
-                </section>
-<!--Fin dela seccion de la pagina-->
+            </section>
+            <!--Fin dela seccion de la pagina-->
             </div>
         </div>
 
-<!--Footer es extraido del archivo de una de las plantillas-->
+        <!--Footer es extraido del archivo de una de las plantillas-->
         <footer id="foot" class="row" ng-include src="'footer.html'">
 
         </footer>
 
-<!--Con este script me permite integrar plantillas a mi paguina html con angularjs-->
+        <!--Con este script me permite integrar plantillas a mi paguina html con angularjs-->
         <script>
             var miAPlicacion = angular.module('include',[]);
         </script>
 
-    </body>
+</body>
+
 </html>
