--- a/inmueble.html
+++ b/inmueble.html
@@ -21,7 +21,8 @@
         <script type="text/javascript" src="js/angular.min.js"></script>
         <script type="text/javascript" src="js/angular-route.min.js"></script>
         <script type="text/javascript" src="js/jquery.cookie.js"></script>
-        <script type="text/javascript" src="js/sesion.js"></script>
+        <script type="text/javascript" src="js/funciones.js"></script>
+        <script type="text/javascript" src="js/inmueble.js"></script>
     </head>
     <body>
 <!--header es extraido del archivo header de las plantillas-->
@@ -29,21 +30,18 @@
 
         </header>
         <div class="container-fluid row ">
-	        <div class=" container col-xs-12 col-sm-9 col-md-9 col-lg-9 ">
+	        <div class="container col-xs-12 col-sm-9 col-md-9 col-lg-9">
                 <div class="row">
             	    <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-6 col-lg-6">
 		                <div class="wrapper">
                             <div class="jcarousel-wrapper">
                                 <div class="jcarousel">
-                                    <ul>
-                                        <li><img src="img/ciudad.jpg" alt="Image 1"></li>
-                                        <li><img src="img/ciudad3.png" alt="Image 2"></li>
-                                        <li><img src="img/Veracruz.png" alt="Image 3"></li>
+                                    <ul id="imagenes">
+
                                     </ul>
                                 </div>
                                 <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
                                 <a href="#" class="jcarousel-control-next">&rsaquo;</a>
-                                <p class="jcarousel-pagination"></p>
                             </div>
                         </div>
 	                </div>
@@ -88,7 +86,7 @@
 
                     </p>
                     <h4>Numero de Plantas:</h4>
-                    <p id="palntas" class="text-justify">
+                    <p id="plantas" class="text-justify">
 
                     </p>
                     <h4>Precio: </h4>
@@ -122,6 +120,5 @@
             var miAPlicacion = angular.module('include',[]);
 
         </script>
-        <!-- CONTACT SECTION START -->
     </body>
 </html>
