modificaiones para acciones de inmueble

--- a/login.html
+++ b/login.html
@@ -1,56 +1,55 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Realiza la búsqueda de casa, departamento que deseas de tu gusto">
-        <meta name="author" content="Ivan Romero Garcia">
-        <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Confor House</title>
-        <link rel="icon" href="">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/stylelogin.css">
-        <link rel="stylesheet" href="css/styleindex.css">
-        <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/jquery.cookie.js"></script>
-        <script type="text/javascript" src="js/funciones.js"></script>
-        <script type="text/javascript" src="js/login.js"></script>
-    </head>
-    <body>
-        <header>
-            <nav class="navbar navbar-default" data-spy="affix" data-offset-top="197" >
-                <div class="container-fluid buscador">
-                    <a class="navbar-brand" href="index.html" ><p class="letras">WebSiteName</p></a>
-                </div>
-            </nav>
-        </header>
-<!-- Creacion del formulario de login Falta la creacion de un archivo php para el login -->
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4 col-lg-4 contenedor">
-                    <img src="img/contac.png" class="img-circle" alt="Cinque Terre">
-                        <legend>Login</legend>
-                        <div class="form-group">
-                            <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" required="">
-                            <br>
-                            <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required="">
-                            <br/>
-                            <button id="iniciar" class="btn btn-primary">Iniciar</button>
-                            <a href="registro.html" class="col-xs-offset-2 col-sm-offset-6 col-md-offset-6">Registrarse</a>
-                        </div>
-                    <div id="mensaje">
 
-                    </div>
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="Realiza la búsqueda de casa, departamento que deseas de tu gusto">
+    <meta name="author" content="Ivan Romero Garcia">
+    <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Confor House</title>
+    <link rel="icon" href="">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/stylelogin.css">
+    <link rel="stylesheet" href="css/styleindex.css">
+    <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="js/funciones.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
+            <div class="container-fluid buscador">
+                <a class="navbar-brand" href="index.html">
+                    <p class="letras">WebSiteName</p>
+                </a>
+            </div>
+        </nav>
+    </header>
+    <!-- Creacion del formulario de login Falta la creacion de un archivo php para el login -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4 col-lg-4 contenedor">
+                <img src="img/contac.png" class="img-circle" alt="Cinque Terre">
+                <legend>Login</legend>
+                <div class="form-group">
+                    <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" required="">
+                    <br>
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required="">
+                    <br/>
+                    <button id="iniciar" class="btn btn-primary">Iniciar</button>
+                    <a href="registro.html" class="col-xs-offset-2 col-sm-offset-6 col-md-offset-6">Registrarse</a>
+                </div>
+                <div id="mensaje">
+
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
-
-
-
-
-
-
