--- a/inmueble.html
+++ b/inmueble.html
@@ -1,61 +1,62 @@
 <!DOCTYPE html>
 <html lang="es" ng-app="">
+
 <head>
-        <meta charset="utf-8">
-        <meta name="description" content="Realiza la búsqueda de casa, departamento que deseas de tu gusto">
-        <meta name="author" content="Ivan Romero Garcia">
-        <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Conform House</title>
-        <link rel="stylesheet" href="css/styleindex.css">
-        <link rel="stylesheet" href="css/stylehouse.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/jcarousel.responsive.css">
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/jquery.jcarousel.js"></script>
-        <script type="text/javascript" src="js/jcarousel.responsive.js"></script>
-        <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/angular.min.js"></script>
-        <script type="text/javascript" src="js/angular-route.min.js"></script>
-        <script type="text/javascript" src="js/jquery.cookie.js"></script>
-        <script type="text/javascript" src="js/funciones.js"></script>
-        <script type="text/javascript" src="js/inmueble.js"></script>
-    </head>
-    <body>
-<!--header es extraido del archivo header de las plantillas-->
-        <header ng-include src="'header.html'">
+    <meta charset="utf-8">
+    <meta name="description" content="Realiza la búsqueda de casa, departamento que deseas de tu gusto">
+    <meta name="author" content="Ivan Romero Garcia">
+    <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Conform House</title>
+    <link rel="stylesheet" href="css/styleindex.css">
+    <link rel="stylesheet" href="css/stylehouse.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/jcarousel.responsive.css">
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.jcarousel.js"></script>
+    <script type="text/javascript" src="js/jcarousel.responsive.js"></script>
+    <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-route.min.js"></script>
+    <script type="text/javascript" src="js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="js/funciones.js"></script>
+    <script type="text/javascript" src="js/inmueble.js"></script>
+</head>
 
-        </header>
-        <div class="container-fluid row ">
-	        <div class="container col-xs-12 col-sm-9 col-md-9 col-lg-9">
-                <div class="row">
-            	    <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-6 col-lg-6">
-		                <div class="wrapper">
-                            <div class="jcarousel-wrapper">
-                                <div class="jcarousel">
-                                    <ul id="imagenes">
+<body>
+    <!--header es extraido del archivo header de las plantillas-->
+    <header ng-include src="'header.html'">
 
-                                    </ul>
-                                </div>
-                                <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
-                                <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+    </header>
+    <div class="container-fluid row ">
+        <div class="container col-xs-12 col-sm-9 col-md-9 col-lg-9">
+            <div class="row">
+                <div class="col-xs-12 col-sm-offset-2 col-sm-6 col-md-6 col-lg-6">
+                    <div class="wrapper">
+                        <div class="jcarousel-wrapper">
+                            <div class="jcarousel">
+                                <ul id="imagenes">
+
+                                </ul>
                             </div>
+                            <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+                            <a href="#" class="jcarousel-control-next">&rsaquo;</a>
                         </div>
-	                </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-offset-2 col-sm-9 col-md-9 col-lg-9 contenido">
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-offset-2 col-sm-9 col-md-9 col-lg-9 contenido">
                     <h3>Descripcion:</h3>
                     <p id="descripcion" class="text-justify">
-                        lLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                        culpa qui officia deserunt mollit anim id est laborum.
+                        lLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                        mollit anim id est laborum.
                     </p>
                     <h4>Servicio:</h4>
                     <p id="servicio" class="text-justify">
@@ -101,24 +102,24 @@
                     <p id="disponible" class="text-justify">
 
                     </p>
-                    </div>
                 </div>
-        	</div>
-        	<div id="contacto" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-                <img class="img-responsive imagen" src="img/icon-email.png" alt="Chania">
-                    <button type="submit" class="btn btn-primary">Contactame</button>
-                    <button type="submit" class="btn btn-primary">Ve mi Perfil</button>
             </div>
         </div>
+        <div id="contacto" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+            <img class="img-responsive imagen" src="img/icon-email.png" alt="Chania">
+            <button type="submit" class="btn btn-primary">Contactame</button>
+            <button type="submit" class="btn btn-primary">Ve mi Perfil</button>
+        </div>
+    </div>
 
-<!--Footer es extraido del archivo footer de las plantillas-->
-        <footer id="foot" class="row" ng-include src="'footer.html'">
+    <!--Footer es extraido del archivo footer de las plantillas-->
+    <footer id="foot" class="row" ng-include src="'footer.html'">
 
-        </footer>
-<!--Con este script me permite integrar plantillas a mi paguina html con angularjs-->
-        <script>
-            var miAPlicacion = angular.module('include',[]);
+    </footer>
+    <!--Con este script me permite integrar plantillas a mi paguina html con angularjs-->
+    <script>
+        var miAPlicacion = angular.module('include',[]);
+    </script>
+</body>
 
-        </script>
-    </body>
 </html>
