--- a/inmueble.html
+++ b/inmueble.html
@@ -107,8 +107,7 @@
         </div>
         <div id="contacto" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
             <img class="img-responsive imagen" src="img/icon-email.png" alt="Chania">
-            <button type="submit" class="btn btn-primary">Contactame</button>
-            <button type="submit" class="btn btn-primary">Ve mi Perfil</button>
+            <a href="contacto.html"><button class="btn btn-primary">Contactame</button></a>
         </div>
     </div>
 
