Validacion de formularios

--- a/login.html
+++ b/login.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stylelogin.css">
     <link rel="stylesheet" href="css/styleindex.css">
+    <link rel="stylesheet" href="css/progression.css">
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="js/progression.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/funciones.js"></script>
@@ -25,7 +27,7 @@
         <nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
             <div class="container-fluid buscador">
                 <a class="navbar-brand" href="index.html">
-                    <p class="letras">WebSiteName</p>
+                    <p class="letras">Conform House</p>
                 </a>
             </div>
         </nav>
@@ -35,17 +37,19 @@
         <div class="row">
             <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4 col-lg-4 contenedor">
                 <img src="img/contac.png" class="img-circle" alt="Cinque Terre">
+                <div id="formularioLogin">
                 <legend>Login</legend>
                 <div class="form-group">
-                    <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" required="">
+                    <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario"                                   data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia">
                     <br>
-                    <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required="">
+                    <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña"                         data-progression data-helper="Contraseña asiganado al usuario">
                     <br/>
                     <button id="iniciar" class="btn btn-primary">Iniciar</button>
                     <a href="registro.html" class="col-xs-offset-2 col-sm-offset-6 col-md-offset-6">Registrarse</a>
                 </div>
                 <div id="mensaje">
 
+                </div>
                 </div>
             </div>
         </div>
