--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" ><p class="letras">WebSiteName</p></a>
+            <a class="navbar-brand" href="index.html" ><p class="letras">Conform House</p></a>
         </div>
         <div>
             <div class="collapse navbar-collapse" id="myNavbar">
