--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
     <link rel="stylesheet" href="css/styleindex.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel='stylesheet' href='css/progression.css'>
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="js/progression.js"></script>
+    <script type="text/javascript" src="js/jquery.twbsPagination.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/funciones.js"></script>
     <script type="text/javascript" src="js/sesion.js"></script>
     <script type="text/javascript" src="js/peticiones.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/jquery-1.3.2.js"></script>
-    <script type="text/javascript" src="js/jquery.paginate.js"></script>
-    <script type="text/javascript" src="js/funciones.js"></script>
-
-
-
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -41,14 +39,14 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="http://localhost/index.html">
-                        <p class="letras">WebSiteName</p>
+                        <p class="letras">Conform House</p>
                     </a>
                 </div>
                 <div>
                     <div class="collapse navbar-collapse" id="myNavbar">
                         <form id="formularioBusqueda" class="navbar-form navbar-left" role="search">
                             <div class="form-group">
-                                <select name="inmueble" class="form-control" required="required">
+                                <select name="inmueble" class="form-control" required="required" data-progression data-helper="Help users through forms by prividing helpful hinters">
                                     <option value="None">--Tipo de Inmobiliario</option>
                                     <option value="Casa">Casa</option>
                                     <option value="Departamento">Departamento</option>
@@ -56,7 +54,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <select name="oferta" class="form-control" required="required">
+                                <select name="oferta" class="form-control" required="required" data-helper="Help users through forms by prividing helpful hinters">
                                     <option value="0">--Oferta</option>
                                     <option value="1">Renta</option>
                                     <option value="2">Venta</option>
@@ -65,7 +63,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <input name="colonia" type="text" class="form-control" placeholder="Colonia, municipio">
+                                <input name="colonia" type="text" class="form-control" placeholder="Colonia, municipio" >
                             </div>
                             <button id="busqueda" type="submit" class="btn btn-default">Buscar</button>
                         </form>
@@ -108,45 +106,11 @@
 
                 <!--div que va contener la informacion de los inmuebles-->
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 contenido">
-                    <!--
-                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                            <img class="img-responsive" src="img/ciudad.jpg" alt="Chania">
-                        </div>
-                        <div class="col-xs-12 col-sm-8 col-md-1 col-lg-8">
-                            <p>Descripcion:</p><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit,                             sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <p>Precio:</p>
-                            <button type="button" class="btn btn-default">Ver mas...</button>
 
-
-                        </div>
-                        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                            <img class="img-responsive" src="img/ciudad.jpg" alt="Chania">
-                        </div>
-                        <div class="col-xs-8 col-sm-8 col-md-1 col-lg-8">
-                            <p>Descripcion:</p><p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit,                             sed do eiusmod tempor
-                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                            culpa qui officia deserunt mollit anim id est laborum.
-                            </p>
-                            <p>Precio:</p>
-                            <button type="button" class="btn btn-default">Ver mas...</button>
-
-
-                        </div>
-                    </div>
--->
                     <!--div que va contener las paguinaciones de la paguina-->
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                         <div id="paginacion" class="col-sm-offset-1 col-md-offset-3">
-
+                             <ul id="pagination-demo" class="pagination-sm"></ul>
                         </div>
                     </div>
 
@@ -165,13 +129,7 @@
             var miAPlicacion = angular.module('include',[]);
         </script>
         <script>
-                $('#pagination-demo').twbsPagination({
-        totalPages: 35,
-        visiblePages: 7,
-        onPageClick: function (event, page) {
-            $('#page-content').text('Page ' + page);
-        }
-    });
+
         </script>
 </body>
 
