--- a/registro.html
+++ b/registro.html
@@ -12,12 +12,16 @@
     <link rel="stylesheet" href="css/styleindex.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styleregis.css">
+    <link rel="stylesheet" href="css/progression.css">
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="js/progression.js"></script>
     <script type="text/javascript" src="js/funciones.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="js/sesion.js"></script>
+    <script type="text/javascript" src="js/registro.js"></script>
 </head>
 
 <body>
@@ -29,37 +33,30 @@
             <!--Creacion del formulario-->
             <form id="formularioUsuario">
                 <legend>Registro de Usuario</legend>
-                <!--
-                    <div class="form-group">
-    		            <label for="cuenta">Cuenta</label>
-    		            <input name="cuenta" type="text" class="form-control" id="cuenta" placeholder="Cuenta Usuario">
-                    </div>
-                    -->
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
-                    <input name="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre">
+                    <input name="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre"
+                    data-progression data-helper="Nombre Apellido Paterno Apellido Materno">
                 </div>
-                <!--
-                    <div class="form-group">
-	    	            <label for="rfc">RFC</label>
-	    	            <input name="rfc" type="text" class="form-control" id="rfc" placeholder="RFC">
-                    </div>
-                    -->
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input name="email" type="email" class="form-control" id="email" placeholder="Email">
+                    <input name="email" type="email" class="form-control" id="email" placeholder="Email"
+                    data-progression data-helper="Correo del usuario por ejemplo= ivan@hot.com">
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
-                    <input name="password" type="password" class="form-control" id="password">
+                    <input name="password" type="password" class="form-control" id="password"
+                    data-progression data-helper="La Contraseña puede contener caracteres alfanumericos y caracteres especiales">
                 </div>
                 <div class="form-group">
                     <label for="password2">Repita la contraseña</label>
-                    <input type="password" class="form-control" id="password2">
+                    <input type="password" class="form-control" id="password2"
+                    data-progression data-helper="Repita la contraseña del campo anterior">
                 </div>
                 <div class="form-group">
                     <label for="tipo">Tipo de persona</label>
-                    <select name="tipo" id="tipo" class="form-control" required="required">
+                    <select name="tipo" id="tipo" class="form-control" required="required"
+                    data-progression data-helper="Escoja una opcion">
                         <option value="None">--Tipo de Persona</option>
                         <option value="1">Moral</option>
                         <option value="2">Fisica</option>
