--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <select name="oferta" class="form-control" required="required" data-helper="Help users through forms by prividing helpful hinters">
+                                <select name="oferta" class="form-control" required="required">
                                     <option value="0">--Oferta</option>
                                     <option value="1">Renta</option>
                                     <option value="2">Venta</option>
