--- a/registro.html
+++ b/registro.html
@@ -36,27 +36,27 @@
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
                     <input name="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre"
-                    data-progression data-helper="Nombre Apellido Paterno Apellido Materno">
+                    data-progression data-helper="Nombre Apellido Paterno Apellido Materno" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input name="email" type="email" class="form-control" id="email" placeholder="Email"
-                    data-progression data-helper="Correo del usuario por ejemplo= ivan@hot.com">
+                    data-progression data-helper="Correo del usuario por ejemplo= ivan@hot.com" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
                     <input name="password" type="password" class="form-control" id="password"
-                    data-progression data-helper="La Contraseña puede contener caracteres alfanumericos y caracteres especiales">
+                    data-progression data-helper="La Contraseña puede contener caracteres alfanumericos y caracteres especiales" required>
                 </div>
                 <div class="form-group">
                     <label for="password2">Repita la contraseña</label>
                     <input type="password" class="form-control" id="password2"
-                    data-progression data-helper="Repita la contraseña del campo anterior">
+                    data-progression data-helper="Repita la contraseña del campo anterior" required>
                 </div>
                 <div class="form-group">
                     <label for="tipo">Tipo de persona</label>
                     <select name="tipo" id="tipo" class="form-control" required="required"
-                    data-progression data-helper="Escoja una opcion">
+                    data-progression data-helper="Escoja una opcion" required>
                         <option value="None">--Tipo de Persona</option>
                         <option value="1">Moral</option>
                         <option value="2">Fisica</option>
