Agregada la seccion de ayuda

--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
 
 </div>
 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-    <p>Copyright © 2015 titulo de la paguina. All rights reserved.</p>
+    <p>Copyright © 2015 titulo de la paguina. All rights reserved.<a href="ayuda.html"> Ayuda</a></p>
 </div>
 <div id="social" class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
     <a href="www.facebook.com">
