problemas con el pull

--- a/ayuda.html
+++ b/ayuda.html
@@ -11,10 +11,10 @@
         <link rel="stylesheet" href="css/styleindex.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/angular.min.js"></script>
         <script type="text/javascript" src="js/angular-route.min.js"></script>
+        <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/jquery.cookie.js"></script>
         <script type="text/javascript" src="js/jquery.paginate.js"></script>
         <script type="text/javascript" src="js/funciones.js"></script>
@@ -45,7 +45,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="http://localhost/index.html" ><p class="letras">WebSiteName</p></a>
+                        <a class="navbar-brand" href="index.html" ><p class="letras">Conform House</p></a>
                     </div>
                 <div>
                     <div class="collapse navbar-collapse" id="myNavbar">
