--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <script type="text/javascript" src="js/funciones.js"></script>
 <script type="text/javascript" src="js/sesion.js"></script>
 <script type="text/javascript" src="js/registro.js"></script>
-<nav class="navbar navbar-default" data-spy="affix" data-offset-top="197" >
+<nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
     <div class="container-fluid buscador">
         <div class="navbar-header  ">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -9,7 +9,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html" ><p class="letras">Conform House</p></a>
+            <a class="navbar-brand" href="index.html">
+                <p class="letras">Conform House</p>
+            </a>
         </div>
         <div>
             <div class="collapse navbar-collapse" id="myNavbar">
@@ -22,11 +24,11 @@
                             <li class="menu1"><a href="login.html">Entrar</a></li>
                             <li class="divider menu1"></li>
                             <li class="menu1"><a href="registro.html">Registrate</a></li>
-                            <li  id="publica" class="menu2"><a href="user.html">Publica</a></li>
+                            <li id="publica" class="menu2"><a href="user.html">Publica</a></li>
                             <li class="divider menu2"></li>
-	                        <li  id="favoritos" class="menu2"><a href="user.html">Favoritos</a></li>
+                            <li id="favoritos" class="menu2"><a href="user.html">Favoritos</a></li>
                             <li class="divider menu2"></li>
-                            <li  id="anuncios" class="menu2"><a href="user.html">Mis Anuncios</a></li>
+                            <li id="anuncios" class="menu2"><a href="user.html">Mis Anuncios</a></li>
                             <li class="divider menu2"></li>
                             <li id="notificaciones" class="menu2"><a href="user.html">Notificaciones</a></li>
                             <li class="divider menu2"></li>
