--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel='stylesheet' href='css/progression.css'>
+    <link rel='stylesheet' href='css/documentation.css'>
+    <link rel="stylesheet" href="css/highlight.js/sunburst.css">
+    <link rel="stylesheet" href="css/bootstrap-responsive.css">
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/progression.js"></script>
-    <script type="text/javascript" src="js/jquery.twbsPagination.js"></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
@@ -23,6 +25,7 @@
     <script type="text/javascript" src="js/funciones.js"></script>
     <script type="text/javascript" src="js/sesion.js"></script>
     <script type="text/javascript" src="js/peticiones.js"></script>
+    <script src="js/bootstrap-paginator.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </head>
 
@@ -57,13 +60,13 @@
                                 <select name="oferta" class="form-control" required="required">
                                     <option value="0">--Oferta</option>
                                     <option value="1">Renta</option>
-                                    <option value="2">Venta</option>
+                                    <option value="2" selected>Venta</option>
                                     <option value="3">Pension</option>
                                     <option value="4">A tratar</option>
                                 </select>
                             </div>
                             <div class="form-group">
-                                <input name="colonia" type="text" class="form-control" placeholder="Colonia, municipio" >
+                                <input name="colonia" type="text" class="form-control" placeholder="Colonia, municipio">
                             </div>
                             <button id="busqueda" type="submit" class="btn btn-default">Buscar</button>
                         </form>
@@ -109,8 +112,8 @@
 
                     <!--div que va contener las paguinaciones de la paguina-->
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <div id="paginacion" class="col-sm-offset-1 col-md-offset-3">
-                             <ul id="pagination-demo" class="pagination-sm"></ul>
+                        <div id="example" class="col-sm-offset-1 col-md-offset-3">
+
                         </div>
                     </div>
 
