--- a/inmueble.html
+++ b/inmueble.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/jcarousel.responsive.css">
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery.jcarousel.js"></script>
     <script type="text/javascript" src="js/jcarousel.responsive.js"></script>
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/funciones.js"></script>
     <script type="text/javascript" src="js/inmueble.js"></script>
@@ -107,7 +107,9 @@
         </div>
         <div id="contacto" class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
             <img class="img-responsive imagen" src="img/icon-email.png" alt="Chania">
-            <a href="contacto.html"><button class="btn btn-primary">Contactame</button></a>
+            <a href="contacto.html">
+                <button class="btn btn-primary">Contactame</button>
+            </a>
         </div>
     </div>
 
