--- a/login.html
+++ b/login.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
@@ -38,18 +39,20 @@
             <div class="col-xs-offset-1 col-xs-10 col-sm-offset-3 col-sm-6 col-md-offset-4 col-md-4 col-lg-4 contenedor">
                 <img src="img/contac.png" class="img-circle" alt="Cinque Terre">
                 <form id="formularioLogin">
-                <legend>Login</legend>
-                <div class="form-group">
-                    <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario"                                   data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia" required>
-                    <br>
-                    <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña"                         data-progression data-helper="Contraseña asiganado al usuario puede ser una palabra alfanumerica" required>
-                    <br/>
-                    <button id="iniciar" class="btn btn-primary">Iniciar</button>
-                    <a href="registro.html" class="col-xs-offset-2 col-sm-offset-6 col-md-offset-6">Registrarse</a>
-                </div>
-                <div id="mensaje">
+                    <legend>Login</legend>
+                    <div class="form-group">
+                        <input type="text" id="usuario" name="usuario" class="form-control" placeholder="Usuario" data-progression data-helper="Ejemplo de nombre: Ivan Romero Garcia"
+                        required>
+                        <br>
+                        <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" data-progression data-helper="Contraseña asiganado al usuario puede ser una palabra alfanumerica"
+                        required>
+                        <br/>
+                        <button id="iniciar" class="btn btn-primary">Iniciar</button>
+                        <a href="registro.html" class="col-xs-offset-2 col-sm-offset-6 col-md-offset-6">Registrarse</a>
+                    </div>
+                    <div id="mensaje">
 
-                </div>
+                    </div>
                 </form>
             </div>
         </div>
