--- a/user.html
+++ b/user.html
@@ -8,16 +8,16 @@
     <meta name="keywords" content="casas, departamentos, renta, venta, pensión">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pagina</title>
+    <title>Conform House</title>
     <link rel="stylesheet" href="css/styleindex.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/progression.css">
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/progression.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script src="js/jquery.cookie.js"></script>
     <script src="js/pestana.js"></script>
 </head>
