--- a/registro.html
+++ b/registro.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styleregis.css">
     <link rel="stylesheet" href="css/progression.css">
+    <script type="text/javascript" src="js/angular.min.js"></script>
+    <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="js/progression.js"></script>
     <script type="text/javascript" src="js/funciones.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/sesion.js"></script>
     <script type="text/javascript" src="js/registro.js"></script>
@@ -35,28 +35,27 @@
                 <legend>Registro de Usuario</legend>
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
-                    <input name="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre"
+                    <input name="nombre" type="text" class="form-control" id="nombre" placeholder="Nombre Apellido Paterno Apellido Materno"
                     data-progression data-helper="Nombre Apellido Paterno Apellido Materno" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input name="email" type="email" class="form-control" id="email" placeholder="Email"
-                    data-progression data-helper="Correo del usuario por ejemplo= ivan@hot.com" required>
+                    <input name="email" type="email" class="form-control" id="email" placeholder="user@conform.com" data-progression data-helper="Correo del usuario por ejemplo= ivan@hot.com"
+                    required>
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
-                    <input name="password" type="password" class="form-control" id="password"
-                    data-progression data-helper="La Contraseña puede contener caracteres alfanumericos y caracteres especiales" required>
+                    <input name="password" type="password" class="form-control" id="password" data-progression data-helper="La Contraseña puede contener caracteres alfanumericos y caracteres especiales"
+                    required placeholder="****">
                 </div>
                 <div class="form-group">
                     <label for="password2">Repita la contraseña</label>
-                    <input type="password" class="form-control" id="password2"
-                    data-progression data-helper="Repita la contraseña del campo anterior" required>
+                    <input type="password2" class="form-control" id="password2" data-progression data-helper="Repita la contraseña del campo anterior"
+                    required placeholder="****">
                 </div>
                 <div class="form-group">
                     <label for="tipo">Tipo de persona</label>
-                    <select name="tipo" id="tipo" class="form-control" required="required"
-                    data-progression data-helper="Escoja una opcion" required>
+                    <select name="tipo" id="tipo" class="form-control" required="required" data-progression data-helper="Escoja una opcion" required>
                         <option value="None">--Tipo de Persona</option>
                         <option value="1">Moral</option>
                         <option value="2">Fisica</option>
